2014-06-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* lua/luatex-api.h: Use '#define LUAI_HASHLIMIT 5' as default,
	as in ../../libs/lua52/lua-5.2.3/src/lstring.c and in
	../../libs/luajit/LuaJIT-2.0.3/src/lj_str.c.
	* lua/lstatslib.c, tex/printing.w: Use LUAI_HASHLIMIT instead of
	LUATEX_HASHCHARS and LUAJITTEX_HASHCHARS.

	* lua/luatex-api.h: Define MyName as "LuajitTeX"/"LuaTeX" and
	my_name as "luajittex"/"luatex".
	* lua/luainit.w, luatex.c, tex/printing.w: Use MyName, my_name.

2014-05-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tex/filename.w: Avoid redefinition of promptfilenamehelpmsg,
	(re)use definition in ../cpascal.h.

2014-05-13  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* tex/filename.w: Print the usual TeX promptfilenamehelpmsg also
	in lua(jit)tex.

2014-04-10  Taco Hoekwater  <taco@luatex.org>

	* luatex.c: hardwire the compilation date, preventing the 
	luatex binary from constantly changing after recompilation

2014-03-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdf/pdfgen.[hw]: Declare get_pdf_table_string() as
	'static const char *'.

2014-03-29  Taco Hoekwater  <taco@luatex.org>

	Import LuaTeX 0.79.1 from LuaTeX repository (released)

2014-03-28  Taco Hoekwater  <taco@luatex.org>

	Import LuaTeX 0.79.0 from LuaTeX repository (released)

2014-03-15  Taco Hoekwater  <taco@luatex.org>

	Import LuaTeX snapshot 0.79.0 from LuaTeX repository (r4903).

2014-02-10  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* lua/luatex-api.h: MSC version has luaopen_bit32() in dll.

2014-02-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* lua/luatex-api.h: Declare luaopen_bit32();

2014-02-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/libluatex.am, am/luafontforge.am, am/luamisc.am,
	am/luasocket.am, am/luatex.am: Add rules for LuaJITTeX.

	* luajittex.test, luajitimage.test: New tests for LuaJITTeX.

	Avoid compiler warnings.
	* lua/liolibext.c, lua/luajitstuff.w: Drop compilation of
	unused static functions.  Avoid to compute unused value.