@@ -1,3 +1,8 @@
+2014-06-19  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* mapfile.c, tounicode.c, writet1.c, writettf: Avoid undefined
+	behaviour when char is signed.
+
 2014-06-18  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* ttf2afm.c: Avoid undefined behaviour when char is signed.
